# routers/commentsRouter_controllers.go
@@ -57,14 +57,6 @@ func init() {
 
 	beego.GlobalControllerRouter["mnp_api/controllers:CustomerController"] = append(beego.GlobalControllerRouter["mnp_api/controllers:CustomerController"],
 		beego.ControllerComments{
-			Method: "GetNearmostRetailer",
-			Router: `/nearmost-retailer/:customerId`,
-			AllowHTTPMethods: []string{"get"},
-			MethodParams: param.Make(),
-			Params: nil})
-
-	beego.GlobalControllerRouter["mnp_api/controllers:CustomerController"] = append(beego.GlobalControllerRouter["mnp_api/controllers:CustomerController"],
-		beego.ControllerComments{
 			Method: "GetAllOrders",
 			Router: `/orders/:customerId`,
 			AllowHTTPMethods: []string{"get"},
@@ -76,46 +68,6 @@ func init() {
 			Method: "GetPendingOrders",
 			Router: `/pending-orders/:customerId`,
 			AllowHTTPMethods: []string{"get"},
-			MethodParams: param.Make(),
-			Params: nil})
-
-	beego.GlobalControllerRouter["mnp_api/controllers:ObjectController"] = append(beego.GlobalControllerRouter["mnp_api/controllers:ObjectController"],
-		beego.ControllerComments{
-			Method: "Post",
-			Router: `/`,
-			AllowHTTPMethods: []string{"post"},
-			MethodParams: param.Make(),
-			Params: nil})
-
-	beego.GlobalControllerRouter["mnp_api/controllers:ObjectController"] = append(beego.GlobalControllerRouter["mnp_api/controllers:ObjectController"],
-		beego.ControllerComments{
-			Method: "GetAll",
-			Router: `/`,
-			AllowHTTPMethods: []string{"get"},
-			MethodParams: param.Make(),
-			Params: nil})
-
-	beego.GlobalControllerRouter["mnp_api/controllers:ObjectController"] = append(beego.GlobalControllerRouter["mnp_api/controllers:ObjectController"],
-		beego.ControllerComments{
-			Method: "Get",
-			Router: `/:objectId`,
-			AllowHTTPMethods: []string{"get"},
-			MethodParams: param.Make(),
-			Params: nil})
-
-	beego.GlobalControllerRouter["mnp_api/controllers:ObjectController"] = append(beego.GlobalControllerRouter["mnp_api/controllers:ObjectController"],
-		beego.ControllerComments{
-			Method: "Put",
-			Router: `/:objectId`,
-			AllowHTTPMethods: []string{"put"},
-			MethodParams: param.Make(),
-			Params: nil})
-
-	beego.GlobalControllerRouter["mnp_api/controllers:ObjectController"] = append(beego.GlobalControllerRouter["mnp_api/controllers:ObjectController"],
-		beego.ControllerComments{
-			Method: "Delete",
-			Router: `/:objectId`,
-			AllowHTTPMethods: []string{"delete"},
 			MethodParams: param.Make(),
 			Params: nil})
 
@@ -193,8 +145,32 @@ func init() {
 
 	beego.GlobalControllerRouter["mnp_api/controllers:RetailerController"] = append(beego.GlobalControllerRouter["mnp_api/controllers:RetailerController"],
 		beego.ControllerComments{
+			Method: "GetByCode",
+			Router: `/by-code/:code`,
+			AllowHTTPMethods: []string{"get"},
+			MethodParams: param.Make(),
+			Params: nil})
+
+	beego.GlobalControllerRouter["mnp_api/controllers:RetailerController"] = append(beego.GlobalControllerRouter["mnp_api/controllers:RetailerController"],
+		beego.ControllerComments{
 			Method: "GetByImei",
 			Router: `/by-imei/:imei`,
+			AllowHTTPMethods: []string{"get"},
+			MethodParams: param.Make(),
+			Params: nil})
+
+	beego.GlobalControllerRouter["mnp_api/controllers:RetailerController"] = append(beego.GlobalControllerRouter["mnp_api/controllers:RetailerController"],
+		beego.ControllerComments{
+			Method: "Import",
+			Router: `/import`,
+			AllowHTTPMethods: []string{"post"},
+			MethodParams: param.Make(),
+			Params: nil})
+
+	beego.GlobalControllerRouter["mnp_api/controllers:RetailerController"] = append(beego.GlobalControllerRouter["mnp_api/controllers:RetailerController"],
+		beego.ControllerComments{
+			Method: "Nearby",
+			Router: `/nearby`,
 			AllowHTTPMethods: []string{"get"},
 			MethodParams: param.Make(),
 			Params: nil})
@@ -255,58 +231,10 @@ func init() {
 			MethodParams: param.Make(),
 			Params: nil})
 
-	beego.GlobalControllerRouter["mnp_api/controllers:UserController"] = append(beego.GlobalControllerRouter["mnp_api/controllers:UserController"],
+	beego.GlobalControllerRouter["mnp_api/controllers:TestController"] = append(beego.GlobalControllerRouter["mnp_api/controllers:TestController"],
 		beego.ControllerComments{
-			Method: "Post",
+			Method: "Index",
 			Router: `/`,
-			AllowHTTPMethods: []string{"post"},
-			MethodParams: param.Make(),
-			Params: nil})
-
-	beego.GlobalControllerRouter["mnp_api/controllers:UserController"] = append(beego.GlobalControllerRouter["mnp_api/controllers:UserController"],
-		beego.ControllerComments{
-			Method: "GetAll",
-			Router: `/`,
-			AllowHTTPMethods: []string{"get"},
-			MethodParams: param.Make(),
-			Params: nil})
-
-	beego.GlobalControllerRouter["mnp_api/controllers:UserController"] = append(beego.GlobalControllerRouter["mnp_api/controllers:UserController"],
-		beego.ControllerComments{
-			Method: "Get",
-			Router: `/:uid`,
-			AllowHTTPMethods: []string{"get"},
-			MethodParams: param.Make(),
-			Params: nil})
-
-	beego.GlobalControllerRouter["mnp_api/controllers:UserController"] = append(beego.GlobalControllerRouter["mnp_api/controllers:UserController"],
-		beego.ControllerComments{
-			Method: "Put",
-			Router: `/:uid`,
-			AllowHTTPMethods: []string{"put"},
-			MethodParams: param.Make(),
-			Params: nil})
-
-	beego.GlobalControllerRouter["mnp_api/controllers:UserController"] = append(beego.GlobalControllerRouter["mnp_api/controllers:UserController"],
-		beego.ControllerComments{
-			Method: "Delete",
-			Router: `/:uid`,
-			AllowHTTPMethods: []string{"delete"},
-			MethodParams: param.Make(),
-			Params: nil})
-
-	beego.GlobalControllerRouter["mnp_api/controllers:UserController"] = append(beego.GlobalControllerRouter["mnp_api/controllers:UserController"],
-		beego.ControllerComments{
-			Method: "Login",
-			Router: `/login`,
-			AllowHTTPMethods: []string{"get"},
-			MethodParams: param.Make(),
-			Params: nil})
-
-	beego.GlobalControllerRouter["mnp_api/controllers:UserController"] = append(beego.GlobalControllerRouter["mnp_api/controllers:UserController"],
-		beego.ControllerComments{
-			Method: "Logout",
-			Router: `/logout`,
 			AllowHTTPMethods: []string{"get"},
 			MethodParams: param.Make(),
 			Params: nil})
