# swagger/swagger.yml
@@ -116,23 +116,6 @@ paths:
           description: '{customer} models.Customer'
         "403":
           description: :customerID is empty
-  /customers/nearmost-retailer/{customerId}:
-    get:
-      tags:
-      - customers
-      description: find customer by customer ID
-      operationId: CustomerController.Get
-      parameters:
-      - in: path
-        name: customerID
-        description: the customer id you want to get
-        required: true
-        type: string
-      responses:
-        "200":
-          description: '{customer} models.Customer'
-        "403":
-          description: :customerID is empty
   /customers/orders/{customerId}:
     get:
       tags:
@@ -167,95 +150,6 @@ paths:
           description: '{customer} models.Customer'
         "403":
           description: :customerID is empty
-  /object/:
-    get:
-      tags:
-      - object
-      description: get all objects
-      operationId: ObjectController.GetAll
-      responses:
-        "200":
-          description: ""
-          schema:
-            $ref: '#/definitions/models.Object'
-        "403":
-          description: :objectId is empty
-    post:
-      tags:
-      - object
-      description: create object
-      operationId: ObjectController.Create
-      parameters:
-      - in: body
-        name: body
-        description: The object content
-        required: true
-        schema:
-          $ref: '#/definitions/models.Object'
-      responses:
-        "200":
-          description: '{string} models.Object.Id'
-        "403":
-          description: body is empty
-  /object/{objectId}:
-    get:
-      tags:
-      - object
-      description: find object by objectid
-      operationId: ObjectController.Get
-      parameters:
-      - in: path
-        name: objectId
-        description: the objectid you want to get
-        required: true
-        type: string
-      responses:
-        "200":
-          description: ""
-          schema:
-            $ref: '#/definitions/models.Object'
-        "403":
-          description: :objectId is empty
-    put:
-      tags:
-      - object
-      description: update the object
-      operationId: ObjectController.Update
-      parameters:
-      - in: path
-        name: objectId
-        description: The objectid you want to update
-        required: true
-        type: string
-      - in: body
-        name: body
-        description: The body
-        required: true
-        schema:
-          $ref: '#/definitions/models.Object'
-      responses:
-        "200":
-          description: ""
-          schema:
-            $ref: '#/definitions/models.Object'
-        "403":
-          description: :objectId is empty
-    delete:
-      tags:
-      - object
-      description: delete the object
-      operationId: ObjectController.Delete
-      parameters:
-      - in: path
-        name: objectId
-        description: The objectId you want to delete
-        required: true
-        type: string
-      responses:
-        "200":
-          description: '{string} delete success!'
-        "403":
-          description: objectId is empty
   /orders/:
     get:
       tags:
@@ -416,6 +310,23 @@ paths:
           description: '{string} delete success!'
         "403":
           description: objectId is empty
+  /retailers/by-code/{code}:
+    get:
+      tags:
+      - retailers
+      description: find retailer by retailer ID
+      operationId: RetailerController.Get
+      parameters:
+      - in: path
+        name: retailerID
+        description: the retailer id you want to get
+        required: true
+        type: string
+      responses:
+        "200":
+          description: '{retailer} models.Retailer'
+        "403":
+          description: :retailerID is empty
   /retailers/by-imei/{imei}:
     get:
       tags:
@@ -433,6 +344,40 @@ paths:
           description: '{retailer} models.Retailer'
         "403":
           description: :retailerID is empty
+  /retailers/import:
+    post:
+      tags:
+      - retailers
+      description: find retailer by retailer ID
+      operationId: RetailerController.Import Retailers
+      parameters:
+      - in: path
+        name: retailerID
+        description: the retailer id you want to get
+        required: true
+        type: string
+      responses:
+        "200":
+          description: '{retailer} models.Retailer'
+        "403":
+          description: :retailerID is empty
+  /retailers/nearby:
+    get:
+      tags:
+      - retailers
+      description: find customer by customer ID
+      operationId: RetailerController.Get
+      parameters:
+      - in: path
+        name: customerID
+        description: the customer id you want to get
+        required: true
+        type: string
+      responses:
+        "200":
+          description: '{customer} models.Customer'
+        "403":
+          description: :customerID is empty
   /retailers/orders/{retailerId}:
     get:
       tags:
@@ -555,124 +500,19 @@ paths:
           description: '{string} delete success!'
         "403":
           description: objectId is empty
-  /user/:
+  /tests/:
     get:
       tags:
-      - user
-      description: get all Users
-      operationId: UserController.GetAll
+      - tests
+      description: get all objects
+      operationId: TestController.GetAll
       responses:
         "200":
           description: ""
           schema:
-            $ref: '#/definitions/models.User'
-    post:
-      tags:
-      - user
-      description: create users
-      operationId: UserController.CreateUser
-      parameters:
-      - in: body
-        name: body
-        description: body for user content
-        required: true
-        schema:
-          $ref: '#/definitions/models.User'
-      responses:
-        "200":
-          description: '{int} models.User.Id'
+            $ref: '#/definitions/models.Object'
         "403":
-          description: body is empty
-  /user/{uid}:
-    get:
-      tags:
-      - user
-      description: get user by uid
-      operationId: UserController.Get
-      parameters:
-      - in: path
-        name: uid
-        description: The key for staticblock
-        required: true
-        type: string
-      responses:
-        "200":
-          description: ""
-          schema:
-            $ref: '#/definitions/models.User'
-        "403":
-          description: :uid is empty
-    put:
-      tags:
-      - user
-      description: update the user
-      operationId: UserController.Update
-      parameters:
-      - in: path
-        name: uid
-        description: The uid you want to update
-        required: true
-        type: string
-      - in: body
-        name: body
-        description: body for user content
-        required: true
-        schema:
-          $ref: '#/definitions/models.User'
-      responses:
-        "200":
-          description: ""
-          schema:
-            $ref: '#/definitions/models.User'
-        "403":
-          description: :uid is not int
-    delete:
-      tags:
-      - user
-      description: delete the user
-      operationId: UserController.Delete
-      parameters:
-      - in: path
-        name: uid
-        description: The uid you want to delete
-        required: true
-        type: string
-      responses:
-        "200":
-          description: '{string} delete success!'
-        "403":
-          description: uid is empty
-  /user/login:
-    get:
-      tags:
-      - user
-      description: Logs user into the system
-      operationId: UserController.Login
-      parameters:
-      - in: query
-        name: username
-        description: The username for login
-        required: true
-        type: string
-      - in: query
-        name: password
-        description: The password for login
-        required: true
-        type: string
-      responses:
-        "200":
-          description: '{string} login success'
-        "403":
-          description: user not exist
-  /user/logout:
-    get:
-      tags:
-      - user
-      description: Logs out current logged in user session
-      operationId: UserController.logout
-      responses:
-        "200":
-          description: '{string} logout success'
+          description: :objectId is empty
 definitions:
   models.Object:
     title: Object
@@ -685,38 +525,7 @@ definitions:
       Score:
         type: integer
         format: int64
-  models.Profile:
-    title: Profile
-    type: object
-    properties:
-      Address:
-        type: string
-      Age:
-        type: integer
-        format: int64
-      Email:
-        type: string
-      Gender:
-        type: string
-  models.User:
-    title: User
-    type: object
-    properties:
-      Id:
-        type: string
-      Password:
-        type: string
-      Profile:
-        $ref: '#/definitions/models.Profile'
-      Username:
-        type: string
 tags:
-- name: object
-  description: |
-    Operations about object
-- name: user
-  description: |
-    Operations about Users
 - name: retailers
   description: |
     Operations about object
